ksmserver/startup.cpp
@@ -68,9 +68,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 #include <kconfig.h>
 #include <kconfiggroup.h>
-#include <kio/desktopexecparser.h>
 #include <KSharedConfig>
 #include <kprocess.h>
+#include <krun.h>
 #include <KNotifyConfig>
 #include <KService>
 
@@ -677,18 +677,8 @@ void KSMServer::slotAutoStart()
         }
         KService service(serviceName);
         qCInfo(KSMSERVER) << "Starting autostart service " << serviceName;
-        auto p = new QProcess(this);
-        auto arguments = KIO::DesktopExecParser(service, QList<QUrl>()).resultingArguments();
-        if (arguments.isEmpty()) {
-            qCInfo(KSMSERVER) << "failed to parse" << serviceName << "for autostart";
-            continue;
-        }
-        auto program = arguments.takeFirst();
-        p->start(program, arguments);
-        connect(p, static_cast<void (QProcess::*)(int)>(&QProcess::finished), [p](int exitCode) {
-            qCInfo(KSMSERVER) << "autostart service" << p->program() << "finished with exit code " << exitCode;
-            p->deleteLater();
-        });
+        if( !KRun::runApplication( service, QList<QUrl>(), nullptr, KRun::RunFlags(), QString(), "0" ))
+            qCInfo(KSMSERVER) << "autostart service" << serviceName << "failed to launch";
     } while (true);
     // Loop till we find a service that we can start.
 }
